Fixed issue with background image shifting position when vertical scroll bar appears

--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -11,8 +11,10 @@ body {
   background-image: url('https://i.postimg.cc/tCs8gs3N/IMG-20190920-175636991-HDR.jpg');
   background-repeat: no-repeat;
   background-attachment: fixed;
+  background-position: 50% 50%;
   background-size: cover;
   height: 100vh;
+  overflow-x: hidden;
 }
 
 .font-arvo {
